--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,110 @@
-@import 'scss/reset';
-@import 'scss/base';
+@import "scss/base";
+@import "scss/reset";
 
 :root{
   /* exemple :*/
-  --Dark-grayish-blue: hsl(240, 17%, 80%);
+  --Dark-grayish-blue: hsl(240, 36%, 54%);
   --Soft-violet: hsl(222, 59%, 43%);
 }
 body{
   margin: 0;
   padding: 0;
+  color: white;
   background: var(--Dark-grayish-blue);
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
-.container{
+
+section{
+  position: relative;
   display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  h1{
-    font-size: 3em;
+  align-items: center;
+  min-height: 400px;
+  padding: 100px 20vw;
+}
+.blue {
+  background: #3c31dd;
+}
+
+.red {
+  background: #dd3f31;
+}
+.purple{
+  background: #755dc5;
+
+}
+.pink {
+  background: #9f4367;
+}
+
+.dark {
+  background: #2f2f33;
+}
+
+.curve {
+  position: absolute;
+  height: 250px;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+}
+
+.curve::before {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 40%;
+  width: 55%;
+  height: 100%;
+  transform: translate(83%, 60%);
+  background-color: #dd3f31;
+}
+
+.curve::after {
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 100% 40%;
+  width: 55%;
+  height: 100%;
+  background-color: #2f2f33;
+  transform: translate(-2.5%, 40%);
+  z-index: 1;
+}
+
+
+.bubble{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+
+  svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 171px;
   }
-  a{
-    color: var(--Soft-violet);
+  .shape-fill{
+    fill: #9f4367;
   }
-  .description{
-    font-size: 2em;
-    padding: 20px 0;
-  }
+}
+.spacer{
+  aspect-ratio: 960/300;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  min-height: 400px;
+  background-image: url("../assets/stacked-waves-haikei.svg") ;
+
 }
